:bug: removes white space when filtering backends in dashboard

--- a/app/assets/stylesheets/provider/admin/_dashboard.scss
+++ b/app/assets/stylesheets/provider/admin/_dashboard.scss
@@ -16,12 +16,8 @@
   &--services {
     margin-top: line-height-times(1.4);
 
-    section.hidden {
+    .hidden {
       display: none;
-    }
-
-    tr.hidden {
-      visibility: collapse;
     }
   }
 
